---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 2025-07-27
  Bugfixes:
    - moved `excluded_surfaces` to temporary local variable, it shouldn't be persisted or else
      I cannot add new internal surfaces easily.
    - added more checks on array elements to avoid crashes with `?` and `nil` only which are
      hard to debug
    - handle missing ruin-set while it is still configured. This might be the case when a mod
      failed to properly load its ruin-sets
    - use constants.ENABLE_DEBUG_LOG_KEY instead of hard-coded string (recommended for mod devs)
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2025-07-27
  Bugfixes:
    - Event registrations can only be one function at a time. So if you register two to the
      same event the later one overwrites the other one, thanks to @Silly_Warlock pointing this
      out
  Minor:
    - added function name to error messages
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2025-07-27
  Features:
    - `add_ruin_size()` now has a 2nd parameter, `half_size` (uint) which will be added/updated
      in table `utils.ruin_half_sizes`
    - added another debug message
  Bugfixes:
    - fixed logic error in fluid handling in `safe_insert_fluid()`, thanks to @Silly_Warlock
      pointing it out
    - got rid of local copies of `prototypes.fluid` and `entity.insert_fluid()`
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2025-07-24
  Features:
    - Allow ruin-set mods to mark their whole mod exclusively to one or more surfaces
    - introduced `utils.get_ruin_name()` which will return "unknown" if the ruin doesn't have
      a key "name" set or otherwise that key is returned
  Minor: